--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 .box {
   position: absolute;
+  /* display: none; */
   opacity: 0;
   background-color: white;
   margin-top: 0.75em;
@@ -21,4 +22,8 @@
 mark {
   background-color: white!important;
   border-bottom: 1px solid blue;
+}
+
+.close_box {
+  float: right;
 }
