remove suggestion button

--- a/gc_style.css
+++ b/gc_style.css
@@ -4,7 +4,6 @@
 
 .gc_box {
   position: absolute;
-  /* display: none; */
   opacity: 0;
   background-color: white;
   margin-top: 0.75em;
@@ -12,12 +11,10 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.gc_gc_box_border {
+.gc_box_border {
   border-top: 0.5px solid grey;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
-  /* margin-top: 3em;
-  margin-bottom: 0.5em; */
 }
 
 .gc_gc_options_border {
@@ -49,10 +46,6 @@
 
 .gc_success_text {
   color: green;
-}
-
-.btn-primary {
-  cursor: pointer;
 }
 
 .grammar {
